Crafting calculation optimization
- Fixed cache bug: side-effect data lost causing GUI display errors
- HashMap → Guava Cache LRU (default 10000, prevents memory leak)
- Optimized cache key fingerprint, reduced key space
- fastutil primitive collections, reduced boxing
- cacheFuzzy rewrite: O(n) → O(1)
- Added experimental graph optimization (ae2.crafting.graph package)
- Added memoizationCacheSize config
- Added debug tools: CraftingTreeTestBlock and /ae2 craftingpause